syntax = "proto3";
package dsm;

// The Service Definition
service DSMService {
  rpc ReceiveRaRequest(RaRequestMsg) returns (Empty);
  rpc ReceiveRaReply(RaReplyMsg) returns (Empty);
  rpc ReceiveDsmUpdate(DsmUpdateMsg) returns (Empty);
  rpc ReceiveDsmFetch(DsmFetchRequest) returns (DsmFetchReply);
}

//RA Messages
message RaRequestMsg {
  int32 node_id = 1;
  int32 timestamp = 2; // for RA algo 
}

message RaReplyMsg {
  int32 node_id = 1;
}

//Data Transfer Messages
message DsmUpdateMsg {
  string object_name = 1;
  bytes data = 2;
  int32 version = 3;
}

message DsmFetchRequest {
  string object_name = 1;
}

message DsmFetchReply {
  string object_name = 1;
  bytes data = 2;
  bool found = 3;
}

message Empty {} //For void returns 